Archive2/74/80a4138603446f/output
+ clang++ --std=gnu++11 main.cpp
main.cpp:16:12: error: cannot take the address of an rvalue of type 'int *'
    c_call(&(f.get_int()));
           ^ ~~~~~~~~~~~
1 error generated.
